tests/expectations/compiler/statements/assign_fail.out
Error [ETYC0372000]: Invalid assignment target: test.aleo::x::y.
    --> compiler-test:3:9
     |
   3 |         x::y = y;
     |         ^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: 5u8.
    --> compiler-test:5:9
     |
   5 |         5u8 = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x + x.
    --> compiler-test:7:9
     |
   7 |         x + x = y;
     |         ^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x.neg().
    --> compiler-test:9:9
     |
   9 |         -x = y;
     |         ^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x.not().
    --> compiler-test:11:9
     |
  11 |         !x = y;
     |         ^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: a ? x : x.
    --> compiler-test:12:9
     |
  12 |         a ? x : x = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: x as u32.
    --> compiler-test:13:9
     |
  13 |         x as u32 = y;
     |         ^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: [x, x, x].
    --> compiler-test:15:9
     |
  15 |         [x, x, x] = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: (x, x, x).
    --> compiler-test:17:9
     |
  17 |         (x, x, x) = y;
     |         ^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: test.aleo::x { x: y }.
    --> compiler-test:18:9
     |
  18 |         x { x: y } = y;
     |         ^^^^^^^^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: test.aleo::x().
    --> compiler-test:19:9
     |
  19 |         x() = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
Error [ETYC0372000]: Invalid assignment target: 4u8.
    --> compiler-test:21:9
     |
  21 |         4u8 = y;
     |         ^^^
     |
     = Valid assignment targets are identifiers, tuple accesses, array accesses, and struct accesses.
